# oRGB

./: CMakeLists.txt  README.md  UMLDiagram.drawio  doxyfile  workflow.drawio
include/: ColorAdjustment.hpp  ConvertColorSpace.hpp  wrapper.hpp
src/: ColorAdjustment.cpp  ConvertColorSpace.cpp  main.cpp  wrapper.cpp
test/: CMakeLists.txt  ConvertColorSpace_test.cpp  ConvertColorSpace_test.hpp
